# ML-Project-plantilla

./: README.md  pyproject.toml  readme_root.md
notebooks/: template.ipynb  use.py
src/: README.md
src/ml_project_plantilla/pipelines/: src - Acceso directo.lnk
